# egui_vulkano_backend

./: .gitignore  Cargo.toml  README.md  port_guide_v030.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main.yml  rust.yml
egui_vulkano_backend/: Cargo.toml  README.md
egui_vulkano_backend/src/: lib.rs  render_pass.rs  shader.rs
egui_vulkano_backend/src/shaders/: fragment.glsl  shader.frag  shader.vert  vertex.glsl
example/: Cargo.toml
example/src/: main.rs
examples/: compiz.rs  demo.rs  multi_thread_rendering.rs  off_screen.rs  using_runner.rs
examples/off_screen/: frag.glsl  frag.spv  main.rs  renderer.rs  vert.glsl  vert.spv
src/: eframe.rs  lib.rs  painter.rs  present_shader.rs  render_pass.rs  runner.rs  shader.rs
src/shaders/: frag.spv  present_frag.spv  present_shader.frag  present_shader.vert  present_vert.spv  shader.frag  shader.vert  vert.spv
