[package]
name = "egui_vulkano_backend"
version = "0.14.0"
authors = ["t18b219k <t18b219k@mail.cc.niigata-u.ac.jp>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Backend code to use egui with vulkano."
homepage = "https://github.com/t18b219k/egui_vulkano_backend"
repository = "https://github.com/t18b219k/egui_vulkano_backend"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
backend_debug = []
[dependencies]
egui_for_winit = { git = "https://github.com/emilk/egui.git", branch = "egui_for_winit" }
epi = { git = "https://github.com/emilk/egui.git", branch = "egui_for_winit" }
num_cpus="1"
threadpool="1"
vulkano = "^0.25"
winit = "0.25"
[dev-dependencies]
cgmath = "0.18"
chrono = "0.4"

egui = { git = "https://github.com/emilk/egui.git", branch = "egui_for_winit" }
egui_demo_lib = { git = "https://github.com/emilk/egui.git", branch = "egui_for_winit", features = ["syntect","ehttp","http","syntax_highlighting"] }
once_cell = "1.8"
vulkano-win = "^0.25"
