[package]
name = "egui_vulkano_backend"
version = "0.15.0+vulkano0.27"
authors = ["t18b219k <t18b219k@mail.cc.niigata-u.ac.jp>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Backend code to use egui with vulkano."
homepage = "https://github.com/t18b219k/egui_vulkano_backend"
repository = "https://github.com/t18b219k/egui_vulkano_backend"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
backend_debug = []
[dependencies]
bytemuck = "1"
egui ={ git = "https://github.com/emilk/egui.git", branch = "master", features = ["convert_bytemuck"] }
egui-winit = { git = "https://github.com/emilk/egui.git", branch = "master" }
env_logger = "0.9"
epi = { git = "https://github.com/emilk/egui.git", branch = "master" }
log = "0.4"
num_cpus = "1"

threadpool = "1"
vulkano = { git = "https://github.com/vulkano-rs/vulkano.git", branch = "master" }
winit = "0.25"
[dev-dependencies]
cgmath = "0.18"
chrono = "0.4"
egui_demo_lib = { git = "https://github.com/emilk/egui.git", branch = "master", features = ["syntect","ehttp","http","syntax_highlighting"] }
once_cell = "1.8"
vulkano-win = { git = "https://github.com/vulkano-rs/vulkano.git", branch = "master" }
