[package]
name = "egui_vulkano_backend"
version = "0.0.1"
authors = ["t18b219k <t18b219k@mail.cc.niigata-u.ac.jp>"]
edition = "2018"
description="egui vulkano binding "
license="MIT or Apache 2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.20.0"
vulkano-shaders = "0.20.0"
epi = "0.10.0"