[package]
name = "egui_vulkano_backend"
version = "0.0.4"
authors = ["t18b219k <t18b219k@mail.cc.niigata-u.ac.jp>"]
edition = "2018"
license="MIT OR Apache-2.0"
description = "Backend code to use egui with vulkano."
homepage = "https://github.com/t18b219k/egui_vulkano_backend"
repository = "https://github.com/t18b219k/egui_vulkano_backend"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "^0.21.0"
epi = "0.10.0"