[package]
name = "example"
version = "0.1.0"
authors = ["t18b219k <t18b219k@mail.cc.niigata-u.ac.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui_winit_platform = {git="https://github.com/t18b219k/egui_winit_platform.git",branch="master"}
egui_vulkano_backend={path="../egui_vulkano_backend"}
egui="0.10.0"
epi="0.10.0"
winit="0.24.0"
egui_demo_lib = "0.10.0"
vulkano-win = "0.20.0"
vulkano-shaders = "0.20.0"
vulkano = "0.20.0"
chrono = "0.4.19"